opam-version: "2.0"
maintainer: "Jane Street developers"
authors: ["Jane Street Group, LLC"]
homepage: "https://github.com/janestreet/hardcaml_c"
bug-reports: "https://github.com/janestreet/hardcaml_c/issues"
dev-repo: "git+https://github.com/janestreet/hardcaml_c.git"
doc: "https://ocaml.janestreet.com/ocaml-core/latest/doc/hardcaml_c/index.html"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "5.1.0"}
  "core"
  "core_unix"
  "hardcaml"
  "jane_rope"
  "ppx_hardcaml"
  "ppx_jane"
  "ppx_rope"
  "ctypes"         {>= "0.18.0"}
  "ctypes-foreign"
  "dune"           {>= "3.17.0"}
]
available: arch != "arm32" & arch != "x86_32"
synopsis: "Hardcaml C Simulation Backend"
description: "
A fast C-based simulation backend for Hardcaml circuits.

The library transparently compiles a Hardcaml Circuit to C code, which is in turn compiled
and linked into the running executable. The generated simulation object can be used like
any other cyclesim simulation.
"
